vlib/v/checker/tests/return_type.out
vlib/v/checker/tests/return_type.vv:2:9: error: cannot use `any_int` as type `bool` in return argument 
    1 | fn test() bool {
    2 |     return 100
      |            ~~~
    3 | }
    4 |
